objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Siebel_Last_Updated_Date_Formula__c</fullName>
        <formula>TEXT(DAY(DATEVALUE( Siebel_Last_Updated_Date__c )))
+&quot;-&quot;+
CASE(TEXT(MONTH(DATEVALUE(Siebel_Last_Updated_Date__c))),
&quot;1&quot;, &quot;Jan&quot;,
&quot;2&quot;, &quot;Feb&quot;,
&quot;3&quot;, &quot;Mar&quot;,
&quot;4&quot;, &quot;Apr&quot;,
&quot;5&quot;, &quot;May&quot;,
&quot;6&quot;, &quot;Jun&quot;,
&quot;7&quot;, &quot;Jul&quot;,
&quot;8&quot;, &quot;Aug&quot;,
&quot;9&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
TEXT(YEAR(DATEVALUE(Siebel_Last_Updated_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Last Updated Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Last_Updated_Date_Text__c</fullName>
        <description>Denormalized Last Updated Date</description>
        <label>Siebel Last Updated Date Text</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Last_Updated_Date__c</fullName>
        <description>Siebel Last Updated Date</description>
        <label>Siebel Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_License_Number__c</fullName>
        <description>Siebel License Number</description>
        <label>License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Net_Price__c</fullName>
        <description>Siebel Net Price</description>
        <label>Siebel Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Siebel_Next_Bill_Date_Formula__c</fullName>
        <formula>IF(NOT(ISNULL(Siebel_Next_Bill_Date__c)),
MID(TEXT(Siebel_Next_Bill_Date__c), IF(MID(TEXT(Siebel_Next_Bill_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Siebel_Next_Bill_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Siebel_Next_Bill_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Siebel_Next_Bill_Date__c),4)
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Next Bill Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Next_Bill_Date_Text__c</fullName>
        <description>Denormalized Next Bill Date</description>
        <label>Siebel Next Bill Date Text</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Next_Bill_Date__c</fullName>
        <description>Siebel Next Bill Date</description>
        <label>Siebel Next Bill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Offering_Configuration_Price__c</fullName>
        <description>Siebel Offering Configuration Price</description>
        <label>Siebel Offering Configuration Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Siebel_Owner_Account_CACI__c</fullName>
        <description>Siebel Owner Account CACI</description>
        <label>Siebel Owner Account CACI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Owner_Account_CAN__c</fullName>
        <description>Siebel Owner Account CAN</description>
        <label>Siebel Owner Account CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Owner_Account_First_Name__c</fullName>
        <description>Siebel Owner Account First Name</description>
        <label>Siebel Owner Account First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Owner_Account_Last_Name__c</fullName>
        <description>Siebel Owner Account Last Name</description>
        <label>Siebel Owner Account Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Owner_Account_Name__c</fullName>
        <description>Siebel Owner Account Name</description>
        <label>Siebel Owner Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Parent_ID__c</fullName>
        <description>Siebel Parent Asset ID</description>
        <label>Siebel Parent ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Payment_Method_Formula__c</fullName>
        <formula>IF(Siebel_Payment_Method__c = &apos;Credit Card&apos;, 
Siebel_Credit_Card_Type__c + &apos; &apos; + RIGHT(Siebel_Credit_Card_Num_Masked__c, 4),
IF(Siebel_Payment_Method__c = &apos;EFT&apos;, &apos;EFT&apos;,
IF(Siebel_Payment_Method__c = &apos;Check&apos;, &apos;Check&apos;, Siebel_Payment_Method__c)))</formula>
        <label>Siebel Payment Method Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Payment_Method_Text__c</fullName>
        <description>Payment Method Text for output on Asset Page</description>
        <label>Siebel Payment Method Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Payment_Method__c</fullName>
        <description>Siebel Payment Method</description>
        <label>Siebel Payment Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Primary_Contact_First_Name__c</fullName>
        <description>Siebel Primary Contact First Name</description>
        <label>Siebel Primary Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Primary_Contact_Last_Name__c</fullName>
        <description>Siebel Primary Contact Last Name</description>
        <label>Siebel Primary Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Product_Family__c</fullName>
        <description>Siebel Product Family</description>
        <label>Siebel Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Product_Name__c</fullName>
        <description>Siebel Product Name</description>
        <label>Siebel Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Product_Part_Number__c</fullName>
        <description>Siebel Product Part Number</description>
        <label>Siebel Product Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Promotion_Name__c</fullName>
        <description>Siebel Promotion Name</description>
        <label>Siebel Promotion Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Purchase_Date_Formula__c</fullName>
        <formula>TEXT(DAY(DATEVALUE( Siebel_Purchase_Date__c )))
+&quot;-&quot;+
CASE(TEXT(MONTH(DATEVALUE(Siebel_Purchase_Date__c))),
&quot;1&quot;, &quot;Jan&quot;,
&quot;2&quot;, &quot;Feb&quot;,
&quot;3&quot;, &quot;Mar&quot;,
&quot;4&quot;, &quot;Apr&quot;,
&quot;5&quot;, &quot;May&quot;,
&quot;6&quot;, &quot;Jun&quot;,
&quot;7&quot;, &quot;Jul&quot;,
&quot;8&quot;, &quot;Aug&quot;,
&quot;9&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
TEXT(YEAR(DATEVALUE(Siebel_Purchase_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Purchase Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Purchase_Date__c</fullName>
        <description>Siebel Purchase Date</description>
        <label>Siebel Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Registration_Date_Formula__c</fullName>
        <formula>IF(NOT(ISNULL(Siebel_Registration_Date__c)),
MID(TEXT(Siebel_Registration_Date__c), IF(MID(TEXT(Siebel_Registration_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Siebel_Registration_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Siebel_Registration_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Siebel_Registration_Date__c),4), null)</formula>
        <label>Siebel Registration Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Registration_Date__c</fullName>
        <label>Siebel Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Retail_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Siebel Retail Flag</description>
        <label>Siebel Retail Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Retail_Orig_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Siebel Retail Orig Flag</description>
        <label>Siebel Retail Orig Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Root_ID__c</fullName>
        <description>Siebel Root Asset ID</description>
        <label>Siebel Root ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_ID__c</fullName>
        <description>Siebel Row ID</description>
        <externalId>true</externalId>
        <label>Siebel Row ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_Account_CAN__c</fullName>
        <description>Siebel Service Account CAN</description>
        <label>Siebel Service Account CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_Account_Name__c</fullName>
        <description>Siebel Service Account Name</description>
        <label>Siebel Service Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_End_Date_Formula__c</fullName>
        <description>Formula field to display Service End Date in Asset pop-up page.  Formula field is required to format datetime field coming from Siebel.</description>
        <formula>IF(NOT(ISNULL(Siebel_Service_End_Date__c)),
MID(TEXT(Siebel_Service_End_Date__c), IF(MID(TEXT(Siebel_Service_End_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Siebel_Service_End_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Siebel_Service_End_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Siebel_Service_End_Date__c),4), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_End_Date__c</fullName>
        <description>Siebel Service End Date</description>
        <label>Siebel Service End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_Start_Date_Formula__c</fullName>
        <formula>IF(NOT(ISNULL(Siebel_Service_Start_Date__c)),
MID(TEXT(Siebel_Service_Start_Date__c), IF(MID(TEXT(Siebel_Service_Start_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Siebel_Service_Start_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Siebel_Service_Start_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Siebel_Service_Start_Date__c),4), null)</formula>
        <label>Service Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_Start_Date_Text__c</fullName>
        <description>Denormalized Service Start Date</description>
        <label>Siebel Service Start Date Text</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Service_Start_Date__c</fullName>
        <description>Siebel Service Start Date</description>
        <label>Siebel Service Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Siebel_Status_Code__c</fullName>
        <description>Siebel Asset Status</description>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Status_Reason__c</fullName>
        <description>Siebel Status Reason</description>
        <label>Siebel Status Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Suspended_Date_Formula__c</fullName>
        <formula>IF(NOT(ISNULL(Siebel_Suspended_Date__c)),
MID(TEXT(Siebel_Suspended_Date__c), IF(MID(TEXT(Siebel_Suspended_Date__c), 9, 1) = &quot;0&quot;, 10, 9), IF(MID(TEXT(Siebel_Suspended_Date__c), 9, 1) = &quot;0&quot;, 1, 2))
+&quot;-&quot;+
CASE(MID(TEXT(Siebel_Suspended_Date__c),6,2),
&quot;01&quot;, &quot;Jan&quot;,
&quot;02&quot;, &quot;Feb&quot;,
&quot;03&quot;, &quot;Mar&quot;,
&quot;04&quot;, &quot;Apr&quot;,
&quot;05&quot;, &quot;May&quot;,
&quot;06&quot;, &quot;Jun&quot;,
&quot;07&quot;, &quot;Jul&quot;,
&quot;08&quot;, &quot;Aug&quot;,
&quot;09&quot;, &quot;Sep&quot;,
&quot;10&quot;, &quot;Oct&quot;,
&quot;11&quot;, &quot;Nov&quot;,
&quot;12&quot;, &quot;Dec&quot;,
null)
+&quot;-&quot;+
LEFT(TEXT(Siebel_Suspended_Date__c),4), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Suspended Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Suspended_Date_Text__c</fullName>
        <description>Denormalized Suspended Date</description>
        <label>Siebel Suspended Date Text</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Suspended_Date__c</fullName>
        <description>Siebel Suspended Date</description>
        <label>Siebel Suspended Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signup_Date__c</fullName>
        <label>Signup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusGlobal__c</fullName>
        <description>IF((NOT(ISBLANK(Text(Status)))),Text(Status),
IF((Online_Current_Product_SKU__c = &quot;9999&quot;),&quot;Active/Subscribed&quot;,
IF(AND(NOT(ISBLANK(Cancel_Date__c)),NOT(ISBLANK(Payment_Setup_Date__c))),&quot;Cancelled Subscription&quot;,
IF(AND(ISBLANK(Cancel_Date__c),NOT(ISBLANK(Payment_Setup_Date__c)),NOT(ISBLANK(Suspend_Date__c))),&quot;Suspended&quot;,
IF(AND(NOT(ISBLANK(Cancel_Date__c)),ISBLANK(Payment_Setup_Date__c),ISBLANK(Suspend_Date__c)),&quot;Cancelled Trial&quot;,
IF(AND(ISBLANK(Cancel_Date__c),NOT(ISBLANK(Payment_Setup_Date__c)),ISBLANK(Suspend_Date__c)),&quot;Active/Subscribed&quot;,
IF(AND(ISBLANK(Cancel_Date__c),ISBLANK(Payment_Setup_Date__c),ISBLANK(Suspend_Date__c),NOT(ISBLANK(Signup_Date__c))),&quot;In Trial&quot;,
&quot;&quot;)))))))</description>
        <formula>IF((NOT(ISBLANK(Text(Status)))),IF(Text(Status) = &quot;Not Defined&quot;, &quot;&quot;, Text(Status)),
IF((Online_Current_Product_SKU__c = &quot;9999&quot;),&quot;Active/Subscribed&quot;,
IF(AND(NOT(ISBLANK(Cancel_Date__c)),NOT(ISBLANK(Payment_Setup_Date__c))),&quot;Cancelled Subscription&quot;,
IF(AND(ISBLANK(Cancel_Date__c),NOT(ISBLANK(Payment_Setup_Date__c)),NOT(ISBLANK(Suspend_Date__c))),&quot;Suspended&quot;,
IF(AND(NOT(ISBLANK(Cancel_Date__c)),ISBLANK(Payment_Setup_Date__c),ISBLANK(Suspend_Date__c)),&quot;Cancelled Trial&quot;,
IF(AND(ISBLANK(Cancel_Date__c),NOT(ISBLANK(Payment_Setup_Date__c)),ISBLANK(Suspend_Date__c)),&quot;Active/Subscribed&quot;,
IF(AND(ISBLANK(Cancel_Date__c),ISBLANK(Payment_Setup_Date__c),ISBLANK(Suspend_Date__c),NOT(ISBLANK(Signup_Date__c))),&quot;In Trial&quot;,
&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>&gt;Susbcription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Susbcription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspend_Date__c</fullName>
        <label>Suspend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TempAccountCountry__c</fullName>
        <formula>Text(Account.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TempAccountCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempAccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TempAccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempAccountRegion__c</fullName>
        <formula>TEXT( Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TempAccountRegion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempAccountType__c</fullName>
        <formula>TEXT(Account.Customer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TempAccountType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempDMStat__c</fullName>
        <label>TempDMStat</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tempcreatebyuser__c</fullName>
        <formula>CreatedBy.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tempcreatebyuser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UIOnlyTZLastLoginDate__c</fullName>
        <description>Displayed on Online subscriptions . Populated on the fly at the time of displaying field.</description>
        <label>UIOnlyTZLastLoginDate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Date__c</fullName>
        <label>Upgrade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Logins__c</fullName>
        <label># of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.STATUS</columns>
        <columns>Company_Id__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IndiaAsset</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.STATUS</columns>
        <columns>Company_Id__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Company_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ProductOnAssetLU__c</field>
            <operation>contains</operation>
            <value>Quickbooks online Plus</value>
        </filters>
        <filters>
            <field>ASSET.NAME</field>
            <operation>contains</operation>
            <value>-7</value>
        </filters>
        <label>India Asset</label>
        <language>en_US</language>
    </listViews>
</CustomObject>